pxc/tests/test_177_priv_import/safe2.px
public namespace safe2;
public import common -;
public import use_unsafe1 -;

public function int foo(int y)
{
  return export_unsafe1::foo_unsafe(y); // error: export_usafe1 is not visible
}

{
  println(foo(3));
}
